# life-as-code

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitlint  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  ANALYSIS.md  CLAUDE.md  Dockerfile  PLAN.MD  QA.md  README.md  analyze_correlations.py  app.py  config.py  config.yaml  create_test_user.py  database.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  garmin_schemas.py  generate_daily_briefing.py  layouts.py  manage_users.py  models.py  package-lock.json  pull_garmin_data.py  pull_hevy_data.py  pyproject.toml  pyrightconfig.json  requirements.txt  routes.py  security.py  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci-cd.yml  ci.yml  treemapper.yml
.treemapper/: agent.whitelist  analytics.whitelist  backend.whitelist  bot.whitelist  charts.whitelist  cicd.whitelist  db.whitelist  frontend.whitelist  ignore  ml.whitelist  sync.whitelist
data/google/scripts/: import-google-fit.ts  package-lock.json  package.json  parsers.ts
data/scripts/: import.ts  importers.ts  package-lock.json  package.json  schemas.ts
data/scripts/apple/: import-apple-health.ts  parsers.ts
data/scripts/google/: import-google-fit.ts  parsers.ts
docs/: plan.md
frontend/: .gitignore  .jscpd.json  .prettierignore  .stylelintrc.json  Dockerfile  eslint.config.js  index.html  knip.json  nginx.conf  package-lock.json  package.json  security-headers.conf  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/public/: offline.html
frontend/src/: App.tsx  index.css  main.tsx  version.ts  vite-env.d.ts
frontend/src/__tests__/: statistics.test.ts  strain-normalization.test.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  ReloadPrompt.tsx
frontend/src/components/charts/: CaloriesChart.tsx  ChartCard.tsx  ChartErrorBoundary.tsx  DailyStrainChart.tsx  EnergyChart.tsx  HRVChart.tsx  HeartRateChart.tsx  HeartRateHRVChart.tsx  MultiProviderLineChart.tsx  RecoveryChart.tsx  SleepChart.tsx  SleepLatencyChart.tsx  StepsChart.tsx  StressChart.tsx  TemperatureChart.tsx  TrainingLoadChart.tsx  TrendLineChart.tsx  TrendLines.tsx  (+8 more)
frontend/src/hooks/: useAnalytics.ts  useChat.ts  useClinicalAlerts.ts  useDetailedWorkouts.ts  useFunctionalTests.ts  useGarminActivities.ts  useHealthData.ts  useHealthLog.ts  useLongevityGoals.ts  useMLForecasts.ts  useProfile.ts  useRacePredictions.ts  useSettings.ts  useToday.ts  useTrendData.ts  useWeightTrendData.ts  useWorkoutPrograms.ts
frontend/src/lib/: api.ts  chart-utils.ts  constants.ts  data-fusion.ts  demo-mode.ts  error-mapping.ts  formatters.ts  health-metrics.ts  logger.ts  providers.ts  query-keys.ts  report-formatter.ts  statistics.ts  sync-utils.ts  version.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: api.ts  health.ts
helm/life-as-code-app/: Chart.yaml  values.yaml
helm/life-as-code-app/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  migration-job.yaml  pvc.yaml  secrets.yaml  service.yaml  validation.yaml
migrations/: env.py
migrations/versions/: 001_check_constraints.py  002_garmin_whoop.py  003_rm_apple_health.py  004_sync_progress.py  005_fix_constraints.py  006_add_google_source.py  007_add_webauthn_credentials.py  008_remove_webauthn.py  009_add_apple_health_source.py  010_add_source_to_data_tables.py  011_add_garmin_activities.py  012_add_training_readiness.py  013_add_source_to_stress.py  014_add_predictions_anomalies.py  015_add_snapshots_alerts.py  016_add_whoop_fields.py  017_add_garmin_fields.py  018_add_longevity_tables.py  019_add_updated_at_to_health_tables.py  020_schema_integrity_fixes.py  021_fix_snapshot_mode_and_alert_constraint.py  022_fix_user_calibrating_type.py  023_add_sync_backoff_table.py  024_add_eight_sleep_to_source_constraints.py  025_add_bot_messages_table.py  026_sleep_skin_temp_deviation.py  027_add_sleep_start_end_times.py  028_add_workout_programs.py  029_workout_set_exercise_template.py  029_wset_tmpl_id.py  030_add_health_log_tables.py  031_backfill_health_log.py  032_add_height_cm.py  033_add_food_diary.py  034_extend_health_log.py  b25d549903fc_add_eight_sleep_integration.py
research/: .env.example  .gitignore  pyproject.toml
research/notebooks/: 00_eda.py  01_correlations.py  02_forecasting.py  03_anomaly_tuning.py
research/src/: anomaly_tuning.py  baseline.py  config.py  correlations.py  eda.py  export.py  features.py  forecasting.py  loader.py  preprocess.py  render_results.py  test_engine.py
src/: __init__.py  api.py  api_schemas.py  app.py  backfill_normalized.py  bootstrap_admin.py  callbacks.py  config.py  config_loader.py  create_test_user.py  data_loaders.py  database.py  date_utils.py  eight_sleep_schemas.py  enums.py  errors.py  garmin_schemas.py  generate_daily_briefing.py  google_schemas.py  http_client.py  import_apple_health.py  import_google_data.py  layouts.py  limiter.py  logging_config.py  manage.py  manage_users.py  migrations_init.py  models.py  progressive_sync.py  pull_eight_sleep_data.py  pull_garmin_data.py  pull_hevy_data.py  pull_whoop_data.py  routes.py  scheduler.py  security.py  settings.py  sync_backoff.py  sync_coordinator.py  (+3 more)
src/agent/: agent.py  api_client.py  bot_message_repo.py  config.py  context.py  conversation.py  nutrition.py  prompts.py  reports.py  tools.py
src/analytics/: __init__.py  advanced.py  alert_manager.py  clinical.py  constants.py  correlations.py  data_loader.py  date_utils.py  fusion.py  longevity.py  metric_series.py  metrics.py  pipeline.py  series.py  service.py  sleep_index.py  smart_context.py  stats.py  types.py
src/bot/: __init__.py  bot.py  commands.py  config.py  formatters.py  scheduler.py
src/config/: thresholds.yaml
src/ml/: anomaly.py  config.py  data_loader.py  predict.py  run.py  train.py
tests/: conftest.py  test_analytics.py  test_api.py  test_bot_messages.py  test_db_bootstrap.py  test_models.py  test_security.py  test_sleep_index.py
(+61 files in other folders)
