[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-as-code"
version = "0.1.0"
description = "Personal health tracking and analysis system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Life-as-Code Core Dependencies - Updated for 2025 security fixes
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "garminconnect>=0.2.28",
    "requests>=2.32.4",
    "garth>=0.4.46",
    "python-dotenv>=1.1.0",
    "dash>=3.1.1",
    "dash-bootstrap-components>=1.6.0",
    "scipy>=1.14.1",
    "numpy>=2.3.2",
    "statsmodels>=0.14.4",
    "pyyaml>=6.0.2",
    # Database Dependencies
    "sqlalchemy>=2.0.42",
    "psycopg2-binary>=2.9.10",
    # Authentication & Security Dependencies - Latest security patches
    "Flask>=3.1.1",
    "Flask-Login>=0.6.3",
    "cryptography>=45.0.5",
    "passlib>=1.7.4",
    "flask-wtf>=1.2.1",
    "flask-limiter>=3.8.0",
    # Data Validation
    "pydantic>=2.10.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=24.1.0",
    "ruff>=0.1.15",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Type Checking Stubs
    "types-PyYAML>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.setuptools.packages.find]
where = ["src"]
