[project]
name = "life-as-code-research"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "polars>=1.20",
    "duckdb>=1.2",
    "pyarrow>=18.0",
    "connectorx>=0.4",
    "jupyterlab>=4.3",
    "jupytext>=1.16",
    "plotly>=6.0",
    "kaleido>=0.2",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "pandas>=2.3.3",
    "statsmodels>=0.14.6",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
forecasting = ["torch>=2.2,<3", "chronos-forecasting>=2.1.0", "transformers>=4.40"]
tracking = ["mlflow>=2.19"]

[project.scripts]
export-snapshot = "src.export:main"

[tool.jupytext]
formats = "py:percent"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
